--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@ body {
     rgba(1, 6, 14, 0.6) 36%,
     rgba(1, 14, 29, 0.6) 55%,
     rgba(49, 18, 93, 0.4));
+    font-family: ui-sans-serif,system-ui,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
 }
 
 a {
